Fixed - bug 346618: [Theming][Scrollbar] background-image property is missing https://bugs.eclipse.org/bugs/show_bug.cgi?id=346618

--- a/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/scrollbarkit/ScrollBar.default.css
+++ b/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/scrollbarkit/ScrollBar.default.css
@@ -16,6 +16,7 @@ ScrollBar {
   background-color: #f3f3f4;
   border-radius: 3px 3px 3px 3px;
   width: 15px;
+  background-image: none;
 }
 
 ScrollBar-Thumb {
