--- a/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/rwtdefault/ScrollBar.test.css
+++ b/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/rwtdefault/ScrollBar.test.css
@@ -14,6 +14,15 @@ ScrollBar {
   background-color: #f3f3f4;
   border-radius: 3px 3px 3px 3px;
   width: 15px;
+  background-image: none;
+}
+
+ScrollBar[VERTICAL] {
+  background-image: none;
+}
+
+ScrollBar[HORIZONTAL] {
+  background-image: none;
 }
 
 /* Thumb */
